# news-prediction

./: .gitignore  1-Mining-Sports.ipynb  2-Preprocessing-1-Sports.ipynb  2-Preprocessing-3-Merge-Sports.ipynb  3-Tokenizing-Sports.ipynb  4-Embedding-1-Topic-Sports.ipynb  4-Embedding-4-Trigram-Sports.ipynb  4-Embedding-5-Word2Vec-Sports.ipynb  5-Analyzing-Sports.ipynb  5-Training-Keras-Classification-Sports.ipynb  5-Training-Keras-Regression-Sports.ipynb  9-Analyzing-Sports.ipynb  my_utils.py  pyproject.toml  requirements.txt  visualize.py
