[tool.poetry]
name = "news-prediction"
version = "0.1.0"
description = ""
authors = ["Younghun Ko <koyo@koyo.kr>"]

[tool.poetry.dependencies]
python = "~3.9"
Pillow = "^9.0.0"
beautifulsoup4 = "^4.10.0"
gensim = "^4.1.2"
html5lib = "^1.1"
ipykernel = "^6.5.0"
jamo = "^0.4.1"
matplotlib = "^3.4.3"
numpy = "^1.21.4"
pandas = "^1.3.4"
requests = "^2.26.0"
scikit-learn = "^1.0.1"
scikit-plot = "^0.3.7"
seaborn = "^0.11.2"
tensorflow = "^2.7.0"
tensorflow-addons = "^0.14.0"
tqdm = "^4.62.3"
yarl = "^1.7.2"

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
